# TensorEEG-py

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: covariance_audit.py  manifest_replay.py  sim_eeg_demo.py
src/tensoreeg/: __init__.py  _utils.py  fidelity.py  manifest.py  spd.py  visualization.py
src/tensoreeg/augmentation/: __init__.py  _common.py  a0.py  e0.py  g0.py  g1.py  g2.py
src/tensoreeg/data/: __init__.py  example_anchors.npz  example_manifest.csv
src/tensoreeg/simulation/: __init__.py  artifacts.py  engine.py  manifold.py  physics.py  sources.py  wrappers.py
tests/: conftest.py  test_augmentation.py  test_end_to_end.py  test_fidelity.py  test_manifest.py  test_simulation.py  test_spd.py
